fix: resolve content overlap with dropdown menu in CourseDetailPage

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -56,7 +56,7 @@ body {
 
 // --------------------------------------------
 
-/* ================= Dropdown ================= */
+// ----------------- Dropdown -----------------
 
 .nav-dropdown {
   color: #4b5563;
@@ -98,6 +98,16 @@ body {
 .horizon-line {
   background: rgba(0, 0, 0, 0.1);
   height: 1px;
+}
+
+// --------------------------------------------
+
+.disable-select {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 // --------------------------------------------
